--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="container"> 
-        <img src="/images/kb.png">
+        <img src="/images/kb2.png">
         <h2 class="spectral-extrabold-italic">Wellness awaits. Schedule opens soon. </h2>
     </div>
 </body>
