--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 </head>
 <body>
     <div class="container"> 
-        <img src="/images/kb2.png">
+        <div class="image-container">
+            <img src="/images/kb2.png">
+        </div>
         <h2 class="spectral-extrabold-italic">Wellness awaits. Schedule opens soon. </h2>
     </div>
 </body>
