--- a/index.html
+++ b/index.html
@@ -75,17 +75,17 @@
                 <div class="service-card">
                     <img src="images/bike.jpg" alt="Preventative Care">
                     <h3>Preventative Care</h3>
-                    <p>Stay ahead of pain with our proactive services that identify and treat issues early.</p>
+                    <p>Stay ahead of pain with our proactive wellness assessments. We help you identify and address potential issues before they escalate, ensuring you maintain a healthy, active lifestyle. Start your wellness journey with us today</p>
                 </div>
                 <div class="service-card">
                     <img src="images/runner.jpg" alt="Recovery & Rehabilitation">
                     <h3>Recovery & Rehabilitation</h3>
-                    <p>Regain your strength and mobility through personalized recovery plans.</p>
+                    <p>Reclaim your strength and mobility with our personalized therapy plans. Whether you’re recovering from an injury or surgery, we tailor our approach to help you heal faster and more effectively. Let us support you every step of the way.</p>
                 </div>
                 <div class="service-card">
                     <img src="images/golf.png" alt="Golf Assessment">
                     <h3>Golf Assessment</h3>
-                    <p>Enhance your golf game with our detailed movement assessments.</p>
+                    <p>Enhance your golf game with our comprehensive Golf Performance Assessment, inspired by the Titleist Performance Institute’s 13-point evaluation. We assess your swing mechanics, strength, flexibility, and endurance to help you prevent injuries and improve performance on the course.</p>
                 </div>
             </div>
         </div>
