--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
 
     <!-- About Section -->
     <section class="about">
-        <div class="container">
-            <h2 class="pt-serif-regular about-title">Empowering Your Journey to Physical Wellness</h2>
-            <p>
-                At KB Physical Wellness, we believe in breaking free from traditional healthcare's limitations, focusing instead on proactive, personalized care.
-                </br>
-                Our goal is to help address potential health issues before they become chronic, offering flexible wellness assessments and early intervention treatments.   
-                </br>
-                Whether you're recovering from an injury or aiming to stay at your best, we're here to guide you on your journey to lasting wellness.
-            </p>
-            <button>Call to schedule</button>
+        <div class="container container-center">
+            <div class="about-container">
+                <h2 class="pt-serif-regular about-title">Empowering Your Journey to Physical Wellness</h2>
+                <div class="pt-serif-regular about-body">
+                    <p> At KB Physical Wellness, we believe in breaking free from traditional healthcare's limitations, focusing instead on proactive, personalized care.</p>
+                    <p> Our goal is to help address potential health issues before they become chronic, offering flexible wellness assessments and early intervention treatments.</p>
+                    <p> Whether you're recovering from an injury or aiming to stay at your best, we're here to guide you on your journey to lasting wellness. </p>
+                </div>
+                <button>Call to schedule</button>
+            </div>
         </div>
     </section>
 
@@ -56,12 +56,12 @@
             <div class="team-member">
                 <img src="images/brittany.png" alt="Brittany">
                 <h3>Brittany VonMoser</h3>
-                <p>Brittany is a dedicated physical therapist who’s passionate about helping people move better and live pain-free. With over a decade of experience in outpatient orthopedics, she combines expertise with a genuine commitment to personalized care.</p>
+                <p class="member-body">Brittany is a dedicated physical therapist who’s passionate about helping people move better and live pain-free. With over a decade of experience in outpatient orthopedics, she combines expertise with a genuine commitment to personalized care.</p>
             </div>
             <div class="team-member">
                 <img src="images/kim.png" alt="Kimberly">
                 <h3>Kimberly Greising</h3>
-                <p>Kimberly brings a thoughtful, patient-centered approach to every session. She works closely with her patients to help them achieve their health goals. Kimberly is dedicated to making wellness accessible and effective for everyone she serves.</p>
+                <p class="member-body">Kimberly brings a thoughtful, patient-centered approach to every session. She works closely with her patients to help them achieve their health goals. Kimberly is dedicated to making wellness accessible and effective for everyone she serves.</p>
             </div>
         </div>
     </section>
@@ -69,21 +69,22 @@
     <!-- Services Section -->
     <section class="">
         <div class="container">
+            <h2 class="pt-serif-regular services-title">Services</h2>
             <div class="services">
                 <div class="service-card">
                     <img src="images/bike.jpg" alt="Preventative Care">
                     <h3>Preventative Care</h3>
-                    <p>Stay ahead of pain with our proactive wellness assessments. We help you identify and address potential issues before they escalate, ensuring you maintain a healthy, active lifestyle. Start your wellness journey with us today</p>
+                    <p class="service-body">Stay ahead of pain with our proactive wellness assessments. We help you identify and address potential issues before they escalate, ensuring you maintain a healthy, active lifestyle. Start your wellness journey with us today</p>
                 </div>
                 <div class="service-card">
                     <img src="images/runner.jpg" alt="Recovery & Rehabilitation">
                     <h3>Recovery & Rehabilitation</h3>
-                    <p>Reclaim your strength and mobility with our personalized therapy plans. Whether you’re recovering from an injury or surgery, we tailor our approach to help you heal faster and more effectively. Let us support you every step of the way.</p>
+                    <p class="service-body">Reclaim your strength and mobility with our personalized therapy plans. Whether you’re recovering from an injury or surgery, we tailor our approach to help you heal faster and more effectively. Let us support you every step of the way.</p>
                 </div>
                 <div class="service-card">
                     <img src="images/golf.png" alt="Golf Assessment">
                     <h3>Golf Assessment</h3>
-                    <p>Enhance your golf game with our comprehensive Golf Performance Assessment, inspired by the Titleist Performance Institute’s 13-point evaluation. We assess your swing mechanics, strength, flexibility, and endurance to help you prevent injuries and improve performance on the course.</p>
+                    <p class="service-body">Enhance your golf game with our comprehensive Golf Performance Assessment, inspired by the Titleist Performance Institute’s 13-point evaluation. We assess your swing mechanics, strength, flexibility, and endurance to help you prevent injuries and improve performance on the course.</p>
                 </div>
             </div>
         </div>
@@ -94,7 +95,7 @@
         <div class="container">
             <div class="contact">
                 <h2 class="contact-title">Let's get in touch</h2>
-                <form>
+                <form class="contact-form">
                     <input type="text" placeholder="Your name">
                     <input type="text" placeholder="Your phone">
                     <input type="email" placeholder="Your email">
