--- a/index.html
+++ b/index.html
@@ -19,12 +19,7 @@
         <!-- Header Section -->
         <header class="header">
             <div class="nav-bar">
-                <img src="images/circle_logo.png" alt="KB Logo" class="logo">
-                <div class="menu-icon">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
+                <img src="images/top_logo.png" alt="KB Logo" class="logo">
             </div>
         </header>
 
@@ -44,7 +39,7 @@
                     <p> Our goal is to help address potential health issues before they become chronic, offering flexible wellness assessments and early intervention treatments.</p>
                     <p> Whether you're recovering from an injury or aiming to stay at your best, we're here to guide you on your journey to lasting wellness. </p>
                 </div>
-                <button>Call to schedule</button>
+                <a href="tel:+18473441859">Call to schedule</a>
             </div>
         </div>
     </section>
