--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="KB Physical Wellness - Your partners in proactive physical therapy and rehabilitation.">
     <title>KB Physical Wellness</title>
+    <meta name="description" content="Proactive, personalized care at KB Physical Wellness. From preventative care to recovery, our team helps you stay at your best and live pain-free.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="KB Physical Wellness - The Wellness You Deserve">
+    <meta property="og:description" content="Empowering your journey to physical wellness with proactive care, personalized therapy, and rehabilitation.">
+    <meta property="og:image" content="/images/kb2.png">
+    <meta property="og:url" content="https://www.kbphysicalwellness.com">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="KB Physical Wellness - The Wellness You Deserve">
+    <meta name="twitter:description" content="Personalized, proactive care to support your physical wellness journey.">
+    <meta name="twitter:image" content="/images/kb2.png">
+
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
