--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="container">
             <div class="contact">
                 <h2 class="contact-title">Let's get in touch</h2>
-                <form class="contact-form">
+                <form class="contact-form" netlify>
                     <input type="text" placeholder="Your name">
                     <input type="text" placeholder="Your phone">
                     <input type="email" placeholder="Your email">
