--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
             <div class="contact">
                 <h2 class="contact-title">Let's get in touch</h2>
                 <form class="contact-form" netlify>
-                    <input type="text" placeholder="Your name">
-                    <input type="text" placeholder="Your phone">
-                    <input type="email" placeholder="Your email">
-                    <textarea placeholder="Message"></textarea>
+                    <input type="text"  name="name" placeholder="Your name">
+                    <input type="text" name="phone" placeholder="Your phone">
+                    <input type="email" name="email" placeholder="Your email">
+                    <textarea name="message" placeholder="Message"></textarea>
                     <button type="submit">Submit</button>
                 </form>
             </div>
