upside down moon

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
         </div>
     </section>
 
+    <div class="hero-transition">
+    </div>
+
+
+
     <!-- About Section -->
     <section class="about">
         <div class="container container-center">
