update images to circles

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
         <div class="container">
             <h2 class="pt-serif-bold team-title">Meet the Team</h2>
             <div class="team-member">
-                <img src="images/brittany.png" alt="Brittany">
+                <img src="images/britt_circle.png" alt="Brittany">
                 <h3>Brittany VonMoser</h3>
                 <p class="member-body">Brittany is a dedicated physical therapist who’s passionate about helping people move better and live pain-free. With over a decade of experience in outpatient orthopedics, she combines expertise with a genuine commitment to personalized care.</p>
             </div>
             <div class="team-member">
-                <img src="images/kim.png" alt="Kimberly">
+                <img src="images/kim_circle.png" alt="Kimberly">
                 <h3>Kimberly Greising</h3>
                 <p class="member-body">Kimberly brings a thoughtful, patient-centered approach to every session. She works closely with her patients to help them achieve their health goals. Kimberly is dedicated to making wellness accessible and effective for everyone she serves.</p>
             </div>
