--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
         <div class="container">
             <div class="inner-footer">
                 <img src="images/logo_no_circle.png" alt="KB Logo">
-                <p>Located inside "It’s all about you Hair Salon"</p>
-                <p>2330 E Rand Road, Arlington Heights, IL 60004</p>
+                <p>Located inside "Castle Chiropractic"</p>
+                <p>1885 Hicks Rd, Rolling Meadows, IL 60008</p>
                 <p>(847) 306-0638</p>
                 <p>kbphysicalwellness@gmail.com</p>
             </div>
