--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
         <!-- Hero Section -->
         <div class="inner-hero">
+            <img src="images/new_logo.png" alt="KB Physical Wellness" class="hero-logo">
             <h1 class="hero-title">The Wellness You Deserve</h1>
         </div>
     </section>
@@ -58,7 +59,7 @@
                     <p> Our goal is to help address potential health issues before they become chronic, offering flexible wellness assessments and early intervention treatments.</p>
                     <p> Whether you're recovering from an injury or aiming to stay at your best, we're here to guide you on your journey to lasting wellness. </p>
                 </div>
-                <a href="tel:+18473060683">Call to schedule</a>
+                <a href="tel:+18473060683">📞 Call to Schedule</a>
             </div>
         </div>
     </section>
@@ -114,7 +115,7 @@
                     <input type="text" name="phone" placeholder="Your phone">
                     <input type="email" name="email" placeholder="Your email">
                     <textarea name="message" placeholder="Message"></textarea>
-                    <button type="submit">Submit</button>
+                    <button type="submit">✉️ Send Message</button>
                 </form>
             </div>
         </div>
