--- a/index.html
+++ b/index.html
@@ -4,21 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="KB Physical Wellness - Your partners in proactive physical therapy and rehabilitation.">
-    <title>KB Physical Wellness</title>
-    <meta name="description" content="Proactive, personalized care at KB Physical Wellness. From preventative care to recovery, our team helps you stay at your best and live pain-free.">
+    
+    <!-- SEO Meta Tags -->
+    <title>KB Physical Wellness - Physical Therapy in Rolling Meadows, IL</title>
+    <meta name="description" content="KB Physical Wellness offers expert physical therapy and rehabilitation services in Rolling Meadows, IL. Licensed PT Brittany VonMoser, PT, DPT provides personalized care for recovery, preventative wellness, and pain-free living. Located inside Castle Chiropractic.">
+    <meta name="keywords" content="physical therapy, physical therapist, Rolling Meadows IL, rehabilitation, sports therapy, preventative care, licensed physical therapist, PT, DPT, Castle Chiropractic, golf assessment">
+    <link rel="canonical" href="https://www.kbphysicalwellness.com">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    
+    <!-- Geographic Meta Tags -->
+    <meta name="geo.region" content="US-IL">
+    <meta name="geo.placename" content="Rolling Meadows">
+    <meta name="geo.position" content="42.0842;-88.0131">
+    <meta name="ICBM" content="42.0842, -88.0131">
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="KB Physical Wellness - The Wellness You Deserve">
-    <meta property="og:description" content="Empowering your journey to physical wellness with proactive care, personalized therapy, and rehabilitation.">
-    <meta property="og:image" content="/images/kb2.png">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:title" content="KB Physical Wellness - Physical Therapy in Rolling Meadows, IL">
+    <meta property="og:description" content="Expert physical therapy and rehabilitation services with licensed PT Brittany VonMoser, PT, DPT. Personalized care for recovery, preventative wellness, and pain-free living.">
+    <meta property="og:image" content="https://www.kbphysicalwellness.com/images/new_logo.png">
     <meta property="og:url" content="https://www.kbphysicalwellness.com">
+    <meta property="og:site_name" content="KB Physical Wellness">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="KB Physical Wellness - The Wellness You Deserve">
-    <meta name="twitter:description" content="Personalized, proactive care to support your physical wellness journey.">
-    <meta name="twitter:image" content="/images/kb2.png">
+    <meta name="twitter:title" content="KB Physical Wellness - Physical Therapy in Rolling Meadows, IL">
+    <meta name="twitter:description" content="Expert physical therapy and rehabilitation services with licensed PT Brittany VonMoser, PT, DPT. Personalized care for recovery and wellness.">
+    <meta name="twitter:image" content="https://www.kbphysicalwellness.com/images/new_logo.png">
 
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,6 +39,84 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "MedicalBusiness",
+      "@id": "https://www.kbphysicalwellness.com",
+      "name": "KB Physical Wellness",
+      "description": "Expert physical therapy and rehabilitation services in Rolling Meadows, IL",
+      "url": "https://www.kbphysicalwellness.com",
+      "logo": "https://www.kbphysicalwellness.com/images/new_logo.png",
+      "image": "https://www.kbphysicalwellness.com/images/new_logo.png",
+      "telephone": "+18473060638",
+      "email": "kbphysicalwellness@gmail.com",
+      "priceRange": "$$",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "1885 Hicks Rd, Inside Castle Chiropractic",
+        "addressLocality": "Rolling Meadows",
+        "addressRegion": "IL",
+        "postalCode": "60008",
+        "addressCountry": "US"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": "42.0842",
+        "longitude": "-88.0131"
+      },
+      "sameAs": [
+        "https://www.instagram.com/kbphysicalwellness/"
+      ],
+      "medicalSpecialty": "PhysicalTherapy",
+      "hasOfferCatalog": {
+        "@type": "OfferCatalog",
+        "name": "Physical Therapy Services",
+        "itemListElement": [
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Preventative Care",
+              "description": "Proactive wellness assessments to identify and address potential issues before they escalate"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Recovery & Rehabilitation",
+              "description": "Personalized therapy plans for injury recovery and post-surgery rehabilitation"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Golf Assessment",
+              "description": "Comprehensive Golf Performance Assessment based on Titleist Performance Institute evaluation"
+            }
+          }
+        ]
+      },
+      "employee": [
+        {
+          "@type": "Person",
+          "name": "Brittany VonMoser",
+          "jobTitle": "Physical Therapist, PT, DPT",
+          "description": "Licensed physical therapist with over a decade of experience in outpatient orthopedics"
+        },
+        {
+          "@type": "Person",
+          "name": "Kimberly Greising",
+          "jobTitle": "Physical Therapist Assistant, PTA",
+          "description": "Physical therapist assistant providing patient-centered care"
+        }
+      ]
+    }
+    </script>
 </head>
 <body>
 
@@ -70,12 +161,12 @@
             <h2 class="pt-serif-bold team-title">Meet the Team</h2>
             <div class="team-member">
                 <img src="images/britt_circle.png" alt="Brittany">
-                <h3>Brittany VonMoser</h3>
-                <p class="member-body">Brittany is a dedicated physical therapist who’s passionate about helping people move better and live pain-free. With over a decade of experience in outpatient orthopedics, she combines expertise with a genuine commitment to personalized care.</p>
+                <h3>Brittany VonMoser, PT, DPT</h3>
+                <p class="member-body">Brittany is a dedicated physical therapist who's passionate about helping people move better and live pain-free. With over a decade of experience in outpatient orthopedics, she combines expertise with a genuine commitment to personalized care.</p>
             </div>
             <div class="team-member">
                 <img src="images/kim_circle.png" alt="Kimberly">
-                <h3>Kimberly Greising</h3>
+                <h3>Kimberly Greising, PTA</h3>
                 <p class="member-body">Kimberly brings a thoughtful, patient-centered approach to every session. She works closely with her patients to help them achieve their health goals. Kimberly is dedicated to making wellness accessible and effective for everyone she serves.</p>
             </div>
         </div>
@@ -130,6 +221,7 @@
                 <p>1885 Hicks Rd, Rolling Meadows, IL 60008</p>
                 <p>(847) 306-0638</p>
                 <p>kbphysicalwellness@gmail.com</p>
+                <p><a href="https://www.instagram.com/kbphysicalwellness/" target="_blank" rel="noopener noreferrer" style="color: inherit; text-decoration: none;">📷 @kbphysicalwellness</a></p>
             </div>
         </div>
     </footer>
